src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Jobs</label>
        <referenceTo>Batch_Jobs__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the order has been approved as a PO</description>
        <label>PO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickBooksId__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooksId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_With_GST__c</fullName>
        <label>Total With GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>The office total to be used . Replaces order amount as it factors in the opp uplift factor and the the stall multipliers</description>
        <inlineHelpText>The grand total for the order</inlineHelpText>
        <label>Total</label>
        <summarizedField>OrderItem.Total__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.END_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Total__c</columns>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>QuickBooksId__c</columns>
        <columns>ORDERS.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>Accounts_Payable</fullName>
        <active>true</active>
        <description>Accounts Payable - POs</description>
        <label>Accounts Payable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accounts_Receivable</fullName>
        <active>true</active>
        <description>Accounts Receivable - Invoices</description>
        <label>Accounts Receivable</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>